src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

:root {
  --foreground-rgb: 0, 0, 0;
  --background-start-rgb: 214, 219, 220;
  --background-end-rgb: 255, 255, 255;
}

@media (prefers-color-scheme: dark) {
  :root {
    --foreground-rgb: 255, 255, 255;
    --background-start-rgb: 0, 0, 0;
    --background-end-rgb: 0, 0, 0;
  }
}

body {
}

@layer components {
  .auth-bg {
    @apply bg-auth-pattern relative before:bg-auth-gradient before:absolute before:inset-0 h-screen z-0;
  }

  .custom-card {
    @apply bg-outer-space p-normal rounded-normal border-normal border-dove-gray;
  }

  .center-div {
    @apply flex items-center justify-center;
  }

  .error-text {
    @apply text-cinnabar text-xs leading-normal pt-[6px];
  }
}

@layer utilities {
  .text-balance {
    text-wrap: balance;
  }
}

.scrollbar-custom {
  scrollbar-gutter: stable both-edges;
}

.scrollbar-custom::-webkit-scrollbar {
  width: 6px;
}

.scrollbar-custom::-webkit-scrollbar-track {
  display: none;
}

.scrollbar-custom::-webkit-scrollbar-thumb {
  background-color: theme("colors.dove-gray");
  border-radius: 4px;
}

.scrollbar-custom::-webkit-scrollbar-thumb:hover {
  background-color: theme("colors.dodger-blue");
  transform: scale(1.1);
}

